[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Scenes/Menu Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Fonts/kongtext.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Tilesets/Brick Tileset.tres" type="TileSet" id=3]
[ext_resource path="res://assets/sprites/Tilesets/Brick Tileset.png" type="Texture" id=4]
[ext_resource path="res://assets/scripts/Menu.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 48, 64, 16, 16 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 19, 3, 0, 65536, 3, 65536, 65555, 3, 65536, 131072, 3, 65536, 131082, 1, 0, 131091, 3, 65536, 196608, 3, 65536, 196612, 1, 0, 196627, 3, 65536, 262144, 3, 65536, 262146, 1, 0, 262161, 1, 1, 262163, 3, 65536, 327680, 3, 65536, 327699, 3, 65536, 393216, 3, 65536, 393235, 3, 65536, 458752, 3, 65536, 458771, 3, 65536, 524288, 3, 65536, 524291, 1, 0, 524305, 1, 0, 524307, 3, 65536, 589824, 3, 65536, 589843, 3, 65536, 655360, 3, 131072, 655369, 1, 1, 655379, 3, 131072, 720896, 0, 196608, 720897, 0, 196609, 720898, 0, 196609, 720899, 0, 196609, 720900, 0, 196609, 720901, 0, 196609, 720902, 0, 196609, 720903, 0, 196609, 720904, 0, 196609, 720905, 0, 196609, 720906, 0, 196609, 720907, 0, 196609, 720908, 0, 196609, 720909, 0, 196609, 720910, 0, 196609, 720911, 0, 196609, 720912, 0, 196609, 720913, 0, 196609, 720914, 0, 196609, 720915, 0, 196610 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer"]
margin_right = 310.0
margin_bottom = 170.0
dragger_visibility = 2

[node name="Title" type="Label" parent="MarginContainer/VSplitContainer"]
margin_right = 310.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Down Dog"
align = 1
valign = 2
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VSplitContainer"]
margin_top = 32.0
margin_right = 310.0
margin_bottom = 170.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VSplitContainer/MarginContainer2"]
margin_right = 310.0
margin_bottom = 138.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VSplitContainer/MarginContainer2/CenterContainer"]
margin_left = 78.0
margin_top = 24.0
margin_right = 231.0
margin_bottom = 113.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" parent="MarginContainer/VSplitContainer/MarginContainer2/CenterContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 153.0
margin_bottom = 27.0
rect_scale = Vector2( 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "PLAY"

[node name="Settings" parent="MarginContainer/VSplitContainer/MarginContainer2/CenterContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 31.0
margin_right = 153.0
margin_bottom = 58.0
rect_scale = Vector2( 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "SETTINGS"

[node name="Quit" parent="MarginContainer/VSplitContainer/MarginContainer2/CenterContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 62.0
margin_right = 153.0
margin_bottom = 89.0
rect_scale = Vector2( 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VSplitContainer/MarginContainer2/CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/MarginContainer2/CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/MarginContainer2/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
